# space-gate

./: CMakeLists.txt  CPPLINT.cfg  Dockerfile  background_widget.cpp  background_widget.h  game_widget.cpp  game_widget.h  main.cpp  mainwindow.cpp  mainwindow.h  paint_widget.cpp  paint_widget.h  readme.md  resources.qrc  sonar-project.properties  stars.cpp  stars.h
.github/workflows/: build.yml  cpplint.yml
Constants/: constants.cpp  constants.h
Protobuf/: .gitignore  client_events.proto  events.proto  internal_events.proto  minigame_actions.proto  minigame_responses.proto  scheme.proto  server_events.proto
Resources/Fonts/: fonts.cpp  fonts.h  fonts.qrc
Resources/Images/: images.qrc  resources.qrc
Resources/Sound/: Sound.qrc
src/: final_screen.cpp  final_screen.h
src/AbstractController/: abstract_controller.cpp  abstract_controller.h
src/Client/: background_widget.cpp  background_widget.h  client_main.cpp  client_main_menu.cpp  client_main_menu.h  client_view.cpp  client_view.h  client_view_controller.cpp  client_view_controller.h  stars.cpp  stars.h
src/Client/Controller/: client_controller.cpp  client_controller.h  input_controller.cpp  input_controller.h  key_names.h  key_names_unix.cpp  key_names_windows.cpp
src/Client/Controller/InputController/: input_controller.cpp  input_controller.h  key_names_windows.cpp
src/Client/Games/: minigames_types.h
src/Client/Games/HoleRepairMinigameView/: hole_repair_view.cpp  hole_repair_view.h
src/Client/Games/TerminalMinigameView/: terminal_minigame_view.cpp  terminal_minigame_view.h
src/Client/InputController/: input_controller.cpp  input_controller.h  input_names.cpp  input_names.h  input_names_unix.cpp  input_names_windows.cpp
src/Client/View/: client_view.cpp  client_view.h
src/Client/View/FinalGameWidget/: game_widget.cpp  game_widget.h
src/Client/View/FinalScreen/: final_screen.cpp  final_screen.h
src/Client/View/GameView/: game_view.cpp  game_view.h
src/Client/View/GameWidget/: game_widget.cpp  game_widget.h
src/Client/View/GameWidget/MainGameWidget/: main_game_widget.cpp  main_game_widget.h
src/Client/View/GameWidget/WaitingScreen/: waiting_screen.cpp  waiting_screen.h
src/Client/View/MainMenu/: client_main_menu.cpp  client_main_menu.h
src/Client/View/MainMenu/BackGround/: background_widget.cpp  background_widget.h  star.cpp  star.h
src/Client/View/MainMenu/Background/: background_widget.cpp  background_widget.h  star.cpp  star.h
src/Client/View/MainMenu/ChiefRoomLobby/: chief_room_lobby.cpp  chief_room_lobby.h
src/Client/View/MainMenu/GameOption/: GameOption.cpp  GameOption.h  game_option.cpp  game_option.h
src/Client/View/MainMenu/GuestRoomLobby/: guest_room_lobby.cpp  guest_room_lobby.h
src/Client/View/MainMenu/LightEffect/: light_effect.cpp  light_effect.h
src/Client/View/MainMenu/MainPage/: main_page.cpp  main_page.h
src/Client/View/MainMenu/MainScreen/: main_screen.cpp  main_screen.h
src/Client/View/MainMenu/RoomList/: room_list.cpp  room_list.h
src/Client/View/MainMenu/RoomLobby/: RoomLobby.cpp  RoomLobby.h
src/Client/View/MainMenu/RoomsList/: rooms_list.cpp  rooms_list.h
src/Client/View/MainMenu/SettingsMenu/: settings_menu.cpp  settings_menu.h
src/Client/View/NetworkProblem/: network_problem.cpp
src/Client/View/NetworkProblemWidget/: network_problem_widget.cpp  network_problem_widget.h
src/Event/: event.cpp  event.h
src/Helpers/: helpers.cpp  helpers.h  logging.cpp  logging.h
src/Helpers/Constants/: constants.cpp  constants.h  minigames_settings.cpp  minigames_settings.h
src/Helpers/InputController/: input_controller.cpp  input_controller.h  input_names_windows.cpp  key_names.h  key_names_unix.cpp  key_names_windows.cpp
src/Server/: server_main.cpp
src/Server/Controller/: room_controller.cpp  room_controller.h  server_controller.cpp  server_controller.h
src/Server/Controllers/: game_controller.cpp  game_controller.h  room_controller.cpp  room_controller.h  server_controller.cpp  server_controller.h
src/Server/Controllers/GameController/: game_controller.cpp  game_controller.h
src/Server/Controllers/RoomController/: room_controller.cpp  room_controller.h
src/Server/Controllers/ServerController/: server_controller.cpp  server_controller.h
src/Server/Games/: abstract_minigame.cpp  abstract_minigame.h  minigames.h
src/Server/Games/AbstractMinigame/: abstract_minigame.cpp  abstract_minigame.h
src/Server/Games/HoleRepairMinigame/: hole_repair.cpp  hole_repair.h
src/Server/Games/SampleMinigame/: sample_minigame.cpp  sample_minigame.h
src/Server/Games/TerminalMinigame/: terminal_minigame.cpp  terminal_minigame.h
src/Server/Models/GameModel/: game_model.cpp  game_model.h
src/Server/Models/Player/: player.cpp  player.h
src/Server/Models/RoomModel/: room_model.cpp  room_model.h
src/Server/Models/ServerModel/: server_model.cpp  server_model.h
src/Server/Models/User/: user.cpp  user.h
